@@ -1,3 +1,7 @@
+Jul 30, 2007
+
+* ADDER: allow for error(Error) as alias for throws(error(Error, _)).
+
 Mar 28, 2007
 
 * Add option silent(Bool) to force completely silent operation.
